[package]
name = "MEV_Bot_Solana"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.3.1"
dotenv = "0.15.0"
anyhow = "1.0.70"
itertools = "0.11.0"
serde = "1.0.188"
serde_json = "1.0.107"
bounded-vec-deque = "0.1.1"

# Telegram
teloxide = { version = "0.12", features = ["macros"] }

futures = "0.3.5"
futures-util = "*"
tokio = { version = "1.29.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ['sync'] }
tokio-tungstenite = "*"
async-trait = "0.1.74"
eth-encode-packed = "0.1.0"
rlp = { version = "0.5", features = ["derive"] }

csv = "1.2.2"
colored = "2.0.0"
log = "0.4.17"
fern = { version = "0.6.2", features = ["colored"] }
chrono = "0.4.23"
indicatif = "0.17.5"
ndarray = "0.15.6"
web3 = "0.19.0"
eyre = "0.6.12"
reqwest = {version = "0.12.3", features = ["json"] }
strum = "0.26.2"
strum_macros = "0.26.2"
exitfailure = "0.5.1"
solana-sdk = "1.18.9"

[profile.release]
codegen-units = 1
lto = "fat"

